tests/parser-test-files/bad-files/parse-while-let.8.coal
;; BAD: Parse While-Let
(package test-parser)

(define f (while-let :label foo nope))
